--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   flutter_sparkline: "^0.0.4"
-  flutter_staggered_grid_view: "^0.1.4"
+  flutter_staggered_grid_view: ">0.3.2"
 
 dev_dependencies:
   flutter_test:
@@ -53,3 +54,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies, 
   # see https://flutter.io/custom-fonts/#from-packages
+
+environment:
+  sdk: '>2.0.0'
